添加 GA; seo关键字; 底部Home链接; 添加按钮图标

--- a/policy.html
+++ b/policy.html
@@ -8,6 +8,9 @@
         <meta http-equiv="Cache-control" content="no-cache">
         <meta http-equiv="Cache" content="no-cache">
         <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+        <title>ypexporter - export youtube playlists to CSV / Excel</title>
+        <meta name="description" content="A chrome extension made for people who want to export playlists from youtube into csv or excel." />
+        <meta name="keywords" content="export youtube playlists, export youtube playlists to csv, export youtube playlists to excel,  youtube playlists export, export playlists youtube, Ypexporter, Letsfaster, letsfaster, export gram, youtube playlists scraper, youtube playlists picker"/>
         <link rel="icon" type="image/x-icon" href="dist/images/icon16.ico">
         <link rel="stylesheet" type="text/css" href="//g.alicdn.com/platform/legal_online_agreement/1.2.32/linkPage.css">
         <style id="tablesort">
@@ -235,6 +238,15 @@
         </style>
         <title>Privacy Policy</title>
     </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-62RRF2EWNY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-62RRF2EWNY');
+</script>
     <body data-spm='8161610'>
         <div class="agreementpreview agr-content">
             <p class="title" style="margin-top: 1em;  text-align: center; font-weight: bold; white-space: normal;padding-bottom:20px;border-bottom: 1px solid rgb(247, 241, 241);">
@@ -245,9 +257,9 @@
                   Last Updated September 23, 2022<br/>Launched on September 23, 2022
                 </span>
             </p>
-            <!-- 隐私政策内容 -->
+            <!--  -->
             <div>
-              <!-- 综述 -->
+              <!--  -->
               <div>
                 <p class="subtitle" style="margin-top: 1em;  padding-top: 14px; white-space: normal;">
                   <span style="font-size: 16px;">This privacy notice for Letsfaster("Letsfaster," "we," "us," or "our"), describes how and why we might collect, store, use, and/or share ("process") your information when you use our services ("Services"), such as when you: </span>
@@ -258,7 +270,7 @@
                   <p>Questions or concerns? Reading this privacy notice will help you understand your privacy rights and choices. If you do not agree with our policies and practices, please do not use our Services. If you still have any questions or concerns, please contact us at anynote88@gmail.com. </p>
                 </p>
               </div>
-              <!-- 正文区域 -->
+              <!--  -->
               <div>
                 <div class="content">
                   <h3 class="subtitle" style="margin-top: 1em;  padding-top: 14px; font-weight: bold; white-space: normal;">
@@ -447,7 +459,6 @@
                     <li>Payment Services.When using the wallet payment function service co-provided by a third-party service provider and a third-party payment company, the third-party payment company needs to collect information such as your name, type of bank card and card number, expiration date and mobile phone number. Refuse to provide above sensitive and personal information will only prevent you from using the certain functions, and other functions will not be affected.</li>
                     <li>Analytics Partners. We use analytics services to collect and process certain analytics data. These services may also collect information about your use of other websites, apps, and online resources.</li>
                     <li>As Required By Law and Similar Disclosures. We may access, preserve, and disclose your information if we believe doing so is required or appropriate to: (a) comply with law enforcement requests and legal process, such as a court order or subpoena; (b) respond to your requests; or (c) protect your, our, or others’ rights, property, or safety.</li>
-                    <!-- <li>Advertising Partners. We may work with third party advertising partners to show you ads that we think may interest you. These advertising partners may set and access their own cookies, pixel tags, and similar technologies on our Site, and they may otherwise collect or have access to information about you which they may collect over time and across different online services. </li> -->
                     <li>Affiliates. We may share any information we receive with our corporate affiliates for any of the purposes described in this Privacy Policy.</li>
                     <li>Aggregate Information. Where legally permissible, we may use and share information about users with our partners in aggregated or de-identified form that can't reasonably be used to identify you.
                       Third-Party Partners. We also share information about users with third-party partners in order to receive additional publicly available information about you.</li>
@@ -499,35 +510,12 @@
         <footer class="site-footer">
           <div class="site-footer-inner">
             <ul class="footer-links list-reset" style="font-size:16px;font-weight: 700;">
-              <!-- <li>
-                <a href="#">Contact</a>
-              </li>
-              <li><a href="/how-it-works">How It Works</a></li>
-              <li><a href="/faqs">FAQ's</a></li> -->
+              <li style="padding-right: 15px;"><a href="https://ypexporter.letsfaster.com">Home</a></li>
               <li style="padding-right: 15px;"><a href="/terms.html">Terms &amp; Conditions</a></li>
               <li><a href="/policy.html">Privacy Policy</a></li>
             </ul>
             <div class="footer-copyright">Copyright © 2022.LetsFaster All rights reserved.</div>
           </div>
       </footer>
-        <div id="App"></div>
-        <div style="display:none;" id="remindContentDiv"></div>
-        <input type="hidden" id="needRemind" value="n">
-        <input type="hidden" id="revisionNum" value="1.1">
-        <input type="hidden" id="agreementId" value="12706">
-        <script type="text/javascript" src="//g.alicdn.com/platform/legal_online_agreement/1.2.32/agreementOnline.js"></script>
-        <script>
-            (function() {
-                var s = document.createElement('script');
-                s.type = 'text/javascript';
-                s.async = true;
-                s.src = '//g.alicdn.com/platform/common/s/1.1/monitor/index.js';
-                s.id = 'tb-beacon-aplus';
-                s.exparams = '';
-                var x = document.getElementsByTagName('script')[0];
-                x.parentNode.insertBefore(s, x);
-            }
-            )();
-        </script>
     </body>
 </html>
