--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Youtebe Playlist Exporter</title>
+<meta name="description" content="A chrome extension made for people who want to export playlists from youtube into csv or excel." />
+<meta name="keywords" content="export youtube playlists, export youtube playlists to csv, export youtube playlists to excel,  youtube playlists export, export playlists youtube, Ypexporter, Letsfaster, letsfaster, export gram, youtube playlists scraper, youtube playlists picker"/>
 <link rel="icon" type="image/x-icon" href="dist/images/icon16.ico">
 <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700|Arimo:400,700" rel="stylesheet">
 <link rel="stylesheet" href="dist/css/style.css">
@@ -32,25 +34,22 @@
     content: "\f005";
   }
 
-
+  .fa-chrome:before {
+    content: "\f268";
+  }
 </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-62RRF2EWNY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-62RRF2EWNY');
+</script>
 <body class="is-boxed has-animations">
 <div class="body-wrap boxed-container">
-	<!-- <header class="site-header">
-		<div class="container">
-			<div class="site-header-inner">
-				<div class="brand header-brand">
-					<h1 class="m-0">
-						<a href="#">
-              YOUTUBE PLAYLIST EXPORTER
-						</a>
-					</h1>
-				</div>
-			</div>
-		</div>
-	</header> -->
-
 	<main class="site-content">
 		<section class="hero">
 			<div class="hero-left-decoration is-revealing" style="margin:0 auto"></div>
@@ -61,7 +60,10 @@
 						<h1 class="hero-title mt-0 is-revealing">Youtube Playlist Exporter</h1>
 						<p class="hero-paragraph is-revealing">The best Chrome extension to export Youtube playlist on the fly. It helps you quickly extract and export information from YouTube playlists into CSV. Such as video name, video number, video description, video url, and so on. All you have to do is snap your finger and access your information.</p>
 						<p class="hero-cta mb-0 is-revealing">
-							<a class="button button-primary button-shadow" href="https://chrome.google.com/webstore/detail/youtube-playlist-exporter/niifghbdemhmnfncaoinbmlbhpjdfnej">ADD TO CHROME FREE</a>
+							<a class="button button-primary button-shadow" style="height: auto;" href="https://chrome.google.com/webstore/detail/youtube-playlist-exporter/niifghbdemhmnfncaoinbmlbhpjdfnej">
+								<span><i class="fa fa-chrome" style="font-size: 32px;"></i></span>
+							<span style="margin-top: 8px; margin-left: 4px;">&nbsp;ADD TO CHROME FREE</span>
+							</a>
 						</p>
 						<div class="hero-cta rating-stars is-revealing" style="padding-left: 65px; margin-top: 10px;">
                             <span class="fa fa-star"></span>
@@ -69,7 +71,7 @@
                             <span class="fa fa-star"></span>
                             <span class="fa fa-star"></span>
                             <span class="fa fa-star"></span>
-                            <!-- <span class="fa fa-star-half-empty"></span> -->
+                            <span class="" style="font-size: 17px; margin-left: 4px;">5/5</span>
                         </div>
 					</div>
 					<div class="hero-illustration">
@@ -77,52 +79,6 @@
 				</div>
 			</div>
 		</section>
-
-		<!-- <section class="features-tabs section">
-			<div class="container">
-				<div class="features-tabs-inner section-inner has-top-divider">
-					<div class="tabs-container">
-						<ul class="tabs-links">
-							<li class="is-revealing">
-								<a href="#tab-1" class="tab-link is-active">
-									<img src="dist/images/tabs-icon-01.svg" alt="Tabs icon 01">
-									<span class="h4 m-0">Amazing features</span>
-								</a>
-							</li>
-							<li class="is-revealing">
-								<a href="#tab-2" class="tab-link">
-									<img src="dist/images/tabs-icon-02.svg" alt="Tabs icon 02">
-									<span class="h4 m-0">Endless possibilities</span>
-								</a>
-							</li>
-							<li class="is-revealing">
-								<a href="#tab-3" class="tab-link">
-									<img src="dist/images/tabs-icon-03.svg" alt="Tabs icon 03">
-									<span class="h4 m-0">Ease of use</span>
-								</a>
-							</li>
-						</ul>
-						<div class="tabs-content">
-							<div id="tab-1" class="tab-panel is-active">
-								<h2>Discover</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-								<p class="mb-0">A arcu cursus vitae congue. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique.</p>
-							</div>
-							<div id="tab-2" class="tab-panel">
-								<h2>Power of customisation</h2>
-								<p>A arcu cursus vitae congue. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique.</p>
-								<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. A arcu cursus vitae congue.</p>
-							</div>
-							<div id="tab-3" class="tab-panel">
-								<h2>Keep it simple</h2>
-								<p>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
-								<p class="mb-0">Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section> -->
 
 		<section class="pricing section">
 			<div class="container">
@@ -221,7 +177,7 @@
 									<p>Effective immediately.</p>
 								</div>
 							</li>
-              <li>
+              				<li>
 								<div class="accordion-title">
 									<span>What should I do if I encounter problems in use?</span>
 									<div class="accordion-icon"></div>
@@ -251,19 +207,10 @@
 	<footer class="site-footer">
 		<div class="container">
 			<div class="site-footer-inner">
-				<!-- <div class="brand footer-brand">
-					<a href="#">
-						<img src="dist/images/logo.svg" alt="Blue logo">
-					</a>
-				</div> -->
 				<ul class="footer-links list-reset" style="font-size:16px;font-weight: 700;">
-					<!-- <li>
-						<a href="#">Contact</a>
-					</li>
-          <li><a href="/how-it-works">How It Works</a></li>
-          <li><a href="/faqs">FAQ's</a></li> -->
-          <li><a href="/terms.html">Terms & Conditions</a></li>
-          <li><a href="/policy.html">Privacy Policy</a></li>
+					<li><a href="https://ypexporter.letsfaster.com">Home</a></li>
+					<li><a href="/terms.html">Terms & Conditions</a></li>
+					<li><a href="/policy.html">Privacy Policy</a></li>
 				</ul>
 				<div class="footer-copyright">Copyright &copy; 2022.LetsFaster All rights reserved.</div>
 			</div>
